# Search_Engine

./: CMakeLists.txt
config/: config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  server.h
resources/: file001.txt  file002.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt  index_test.cpp  server_tests.cpp
